--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Main Page</h1>
-    <a href="/index.html">Main Page</a>
-    <a href="/About me.html" >About Me</a>
-    <a href="/projects.html" >My Projects</a>
-    <a href="/ReachMe.html" >Reach Me</a>
+    <a href="index.html">Main Page</a>
+    <a href="About me.html" >About Me</a>
+    <a href="projects.html" >My Projects</a>
+    <a href="ReachMe.html" >Reach Me</a>
     <hr>
     <hr>
     
